--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "challeng",
+  "name": "timer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -20,14 +20,14 @@
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
     "lodash": "^4.17.21",
-    "next": "12.1.0",
+    "next": "^12.1.6",
     "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-redux": "^7.2.6",
-    "sass": "^1.49.9",
-    "web3": "^1.7.3"
+    "react-use-array": "^1.0.5",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "eslint": "8.10.0",
